Fix collapse navbar

--- a/public/src/app/components/top-bar/top-bar.component.css
+++ b/public/src/app/components/top-bar/top-bar.component.css
@@ -1,9 +1,3 @@
-
-
-nav div {
-    display: inline-block;
-}
-
 nav a {
     text-decoration: none;
 }
